# efficient-server

./: CMakeLists.txt  README.md  acceptor.cpp  acceptor.h  graph.cpp  graph.h  server.cpp  streamwrapper.cpp  streamwrapper.h  threadwrapper.cpp  threadwrapper.h  workqueue.h  zadani.html
proto/: schema.proto
